<resources>
    <string name="app_name">黄金易购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="click_for_verification">点击获取验证码</string>
    <string name="sms_verification">SMS verification</string>
    <string name="email_verification">E-mail verification</string>
    <string name="security_code">验证码</string>
    <string name="security">验证</string>
    <string name="data_error">数据异常</string>
    <string name="data_loading">数据加载中，请稍候!</string>
    <string name="setting_new_password">Setting a new password</string>
    <string name="enter_new_password">新密码</string>
    <string name="modify_success">确认修改密码</string>
    <string name="bank_account_management">银行卡管理</string>
    <string name="mobile_authentication">手机认证</string>
    <string name="mobile_authentication_d">手机认证：</string>
    <string name="add_band_card">下一步</string>
    <string name="available_balance">可用余额</string>
    <string name="total_amount_to_be_received">待收总额</string>
    <string name="total_assets_account">账户资产</string>
    <string name="my_investment">我的投资</string>
    <string name="financial_details">资金记录</string>
    <string name="widrawal">提现</string>
    <string name="buy">购  买</string>
    <string name="extract">提  取</string>
    <string name="free_verification_code">Get a free verification code</string>
    <string name="amount_freeze">冻结金额</string>
    <string name="principal_amt">待收本金</string>
    <string name="total_amount">资产总额</string>
    <string name="huoqi_total_amount">资产总规模</string>
    <string name="huoqi_purchaseLimit">单人购买限额</string>
    <string name="buy_rule">购买规则</string>
    <string name="widrawal_rule">提取规则</string>
    <string name="proceeds">待收利息</string>
    <string name="recommended">推荐奖励</string>
    <string name="re_rewareds">推荐奖</string>
    <string name="re_rewareds_rules">活动规则</string>
    <string name="condition">奖励\n发放</string>
    <string name="total_income">账户总资产</string>
    <string name="no_of_referrals">推荐人数</string>
    <string name="friends_gross_income">好友总收入</string>
    <string name="recommeded_reward_paid">已支付推荐奖励</string>
    <string name="unpaid_refrrals">未支付推荐奖励</string>
    <string name="wait_paid_refrrals">拟待收推荐奖励</string>
    <string name="friends_have_been_incorporated">好友已收入</string>
    <string name="rewareds_paids">已支付推荐奖励</string>
    <string name="unpaid_rewards">未支付推荐奖励</string>
    <string name="availablebalance">我的可用余额</string>
    <string name="purchaseamount">本次可购买金额</string>
    <string name="buyamount">购买金额</string>
    <string name="submit_treasure">确认购买</string>
    <string name="recharge">充  值</string>
    <string name="withdrawals">提  现</string>
    <string name="withdrawal_fees">1.平台只支持借记卡，不支持信用卡；</string>
    <string name="cash_withdrawal">2.请确认所填写的银行卡开户人与实名认证姓名一致；</string>
    <string name="cash_withdrawal_2">3.所有充值用户中的资金需投资成功后才能提现；</string>
    <string name="arrival_time">4.提交成功的银行卡信息不允许修改，请在提交前确认相关信息的真实有效性;</string>
    <string name="weekends_holidays">5.请提供真实、有效的银行卡，否则由此产生的后果由会员自己承担；</string>
    <string name="weekends_tixian">6.普通提现正常情况下（不含银行系统、第三方支付系统异常）预计二个工作日内到账，节假日延后，不收取手续费；  快速提现正常情况下（不含银行系统、第三方支付系统异常）预计一个工作日内到账，节假日延后，收费3元；到帐时间取决于银行；</string>
    <string name="bank_card_withdrawals">可提现金额:</string>
    <string name="hint_bank_card_withdrawals">可提现金额</string>
    <string name="withdrwal_amt">提现金额：</string>
    <string name="withdrwal_pass">取款密码</string>
    <string name="enter_withdrwal_pass">输入取款密码</string>
    <string name="withdrwal_type">提现方式</string>
    <string name="withdrwal_tishi">请输入交易密码，如果您未修改过此密码，则与登录密码一致。</string>
    <string name="fast_withdrwal">快速提现</string>
    <string name="ordinary_withdrwal">普通提现</string>
    <string name="btn_withdraw">普通提现</string>
    <string name="customer_service">联系我们</string>
    <string name="version_update">版本更新</string>
    <string name="about_xintou">关于信投</string>
    <string name="welcome_page">欢迎页</string>
    <string name="news_notice">公告</string>
    <string name="one_level_f">一级好友</string>
    <string name="two_level_f">二级好友</string>
    <string name="Crrency_symbol">¥</string>
    <string name="remark_note">This is a demo text it will replace by the origenal text </string>
    <string name="project_details_description">Borrower worth 12 million in the red of the mortgage company,now need to borrow 6.0 million installment loan,this is the sisth pen,the interest rate of 13% monthly interest to maturity:30 million or 3 months.</string>
    <string name="recommendation_proprietaty_code">您的专属推荐二维码:</string>
    <string name="recommendation_proprietaty_code_details">让好友扫描下方推荐专属二维码，可直接注册，无需填写推荐人，您就自动成了他的专属推荐人。</string>
    <string name="recommendation_details">让好友扫描下方推荐专属二维码,\n可直接注册信投宝账号,无需填写推荐人,\n您就自动成了他的专属推荐人。</string>
    <string name="referral_link">您的专属链接，无需填写推荐人：</string>
    <string name="income_details">收益明细</string>
    <string name="income_details_data">推荐好友最高可获得好友收入的30%收益，详情请打开官网详询。</string>
    <string name="tips">温馨提示</string>
    <string name="tip1">1、平台只支持借记卡，不支持信用卡；</string>
    <string name="tip2">2、请确认所填写的银行卡开户人与实名认证姓名一致；</string>
    <string name="tip2_1">3、所有充值用户中的资金需投资成功后才能提现；</string>
    <string name="tip3">4、提交成功的银行卡信息不允许修改，请在提交前确认相关信息的真实有效性；</string>
    <string name="tip4">5、请提供真实、有效的银行卡，否则由此产生的后果由会员自己承担；</string>
    <string name="account_management">您的帐户还没有绑定银行卡,请点击下面的按钮绑定银行卡！ </string>
    <string name="news_details">Your investment [letter-Red Book Credit 2014121501]loan payment in advance,you successfull recover the principal
    and interest 100.83 yuan,of which the principal amount of 100.83yuan,0.83yuan interest,prepayment penalty 0, Welcome to continue to invest!</string>
    <string name="news">系统消息</string>
    <string name="username">用户名 :</string>
    <string name="hint_username">用户名</string>
    <string name="id_number">证件号 :</string>
    <string name="hint_id_number">证件号 </string>
    <string name="login_password">登录密码 :</string>
    <string name="deal_password">交易密码</string>
    <string name="changer">修改</string>
    <string name="affirm_changer">确定修改</string>
    <string name="login_password_info">登录密码 </string>
    <string name="real_name">真实姓名：</string>
    <string name="hint_real_name">真实姓名</string>
    <string name="document_type">证件类型</string>
    <string name="recommend">推荐人</string>
    <string name="submit">提交</string>
    <string name="old_password">旧密码</string>
    <string name="enter_old_pass">输入旧密码</string>
    <string name="verification_code">验证码</string>
    <string name="type_the_code">输入手机验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">再次输入新密码:</string>
    <string name="enter_confiemed_password_again">输入确认密码</string>
    <string name="select_bank">选择银行</string>
    <string name="account_name">账户名</string>
    <string name="bank_card">银行卡号</string>
    <string name="province">省</string>
    <string name="select_the_province">选择支行所在省</string>
    <string name="city">市</string>
    <string name="select_the_city">选择支行所在城市</string>
    <string name="branch_name">支行名</string>
    <string name="branch_name_hit">支行名称 请务必填写正确的支行名</string>
    <string name="select_the_branch">分支名</string>
    <string name="enter_bank_card">选择银行卡</string>
    <string name="mobile_no">电话号码</string>
    <string name="enter_no">输入数字</string>
    <string name="seting_new_pass">设置新密码</string>
    <string name="password">密码</string>
    <string name="hit_phone">请输入手机号码</string>
    <string name="enter_pass_again">再次输入密码</string>
    <string name="enter_security_code">输入安全码</string>
    <string name="certified">已认证</string>
    <string name="apply">提交申请</string>
    <string name="apply_recommended">申请理财师</string>
    <string name="apply_hit">从成功申请受理后的3个工作日内即有反馈</string>
    <string name="top_up">充值金额</string>
    <string name="enter">输入充值金额</string>
    <string name="withdrawal_amount">输入取款金额</string>
    <string name="withdraw_description">提现说明  </string>
    <string name="re_description">说明  </string>
    <string name="recommended_no">推荐数:</string>
    <string name="new_listing">新增数:</string>
    <string name="new_invest_listing">首投数:</string>
    <string name="receipt_date">投标日期:</string>
    <string name="end_date">到期日期:</string>
    <string name="collection_date">收款日期:</string>
    <string name="rate">年利率</string>
    <string name="investment_amount">起投金额</string>
    <string name="my_investment_amount">投资金额</string>
    <string name="my_principalinterest_amount">应收本息</string>
    <string name="project_duration">项目期限</string>
    <string name="duration">期限</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="balance">剩余金额</string>
    <string name="balance_dw">剩余金额(元)</string>
    <string name="remark">备注:</string>
    <string name="sender">发送者:</string>
    <string name="sent">发送时间:</string>
    <string name="system_admin">系统管理员</string>
    <string name="dear">尊敬的用户: ****</string>
    <string name="xintou_online">信投在线</string>
    <string name="xintou_bao">信投宝</string>
    <string name="emailid">电子邮件标识:</string>
    <string name="hint_emailid">电子邮件标识</string>
    <string name="comments">评论</string>
    <string name="hint_comments">请输入意见，这将是我们前进的动力</string>
    <string name="contact">联系方式</string>
    <string name="address">地址:</string>
    <string name="address_details">湖南长沙芙蓉中路一段475号玛丽莱大厦六楼</string>
    <string name="zip_code">邮编:</string>
    <string name="micro_letter">微信:</string>
    <string name="customer_service_contact">| 客户服务\n如果您在使用过程中有任何疑问请您与客服人员联系。\n\n 服务时间：\n   工作日  8:30-18:00 \n   全年365天  8:30-21:00 \n\n   全国热线：400-078-1901 \n\n   办公电话：0731-85958988</string>
    <string name="customer_service_address">\n| 客服邮箱\n将邮件发到这里我们将解决您的所有疑问。\n\n    邮箱号：xintou365@163.com \n   邮编：410000</string>
    <string name="customer_service_weixin">\n| 信息追踪\n\n   新浪微博：\n http://weibo.com/p/1006065176211398\n    微信公众号：xintouzaixiancs</string>
    <string name="id_card">身份证</string>
    <string name="feedback">意见反馈</string>
    <string name="delete">删除</string>
    <string name="checkall">全选</string>
    <string name="marked_as_read">标为已读</string>
    <string name="unread">标为未读</string>
    <string name="register">快速注册</string>
    <string name="mobile_number">手机号码</string>
    <string name="mobile">手机号</string>
    <string name="accept_conditions">我已阅读并同意</string>
    <string name="accept_conditions_tittle">《信投宝服务条款》</string>
    <string name="week_password">低</string>
    <string name="medium_password">中</string>
    <string name="high_password">高</string>
    <string name="btn_next">下一步</string>
    <string name="forgot_your_password">登录忘记密码？</string>
    <string name="no_account">没有账号？</string>
    <string name="sign_up_now">立即注册</string>
    <string name="logout">退出登录</string>
    <string name="safelogout">安全退出</string>
    <string name="logout_s">退出</string>
    <string name="bank_details_branch_name">湖南省长沙市开福区</string>
    <string name="hint_province">选择支行所在的省</string>
    <string name="hint_city">选择支行所在的市</string>
    <string name="branch">支行</string>
    <string name="invite_recaward">邀请奖励(元)</string>
    <string name="stata">状态</string>
    <string name="huo_description_q">活期宝的投资范围是什么 ?</string>
    <string name="huo_description">购买“活期宝”的资金投资由平台推荐的真实项目（100%适用于平台风险备用金制度）。</string>
    <string name="investmentrange_q">活期宝中的借款项目有何安全保障?</string>
    <string name="investmentrange">活期宝中的借款项目100%适用于平台风险备用金制度。</string>
    <string name="projectduration_q">活期宝的可提取额度是如何计算的 ? 如何查询可提取额度 ?</string>
    <string name="projectduration">可提取额度是资产总规模中投向货币基金的金额总和。信投宝将通过大数据分析，调整资产总规模投向货币基金的比例（保证不低于资产总规模的20%），以保证用户的收益与满足用户随时提取需求，客户可在“我的账户—活期宝”中查询可提取额度。\n举例：李先生购买了30万元的活期宝产品，当前资产总规模为：1000万元，剩余可提取额度：400万元，李先生可申请提现的最大额度为30万元。</string>
    <string name="huoqihao_time_q">活期宝提取什么时候到账 ?</string>
    <string name="huoqihao_time">1、当日14:00前申请提取，当日18:00提取至用户的信投宝账户中；\n2、当日14:00后申请提取，次日18:00提取至用户的信投宝账户中。</string>
    <string name="onlevel_hit">请输入好友的电话号码</string>
</resources>