<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Both_Match_style"
    android:background="@color/bg_list"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_header"
        style="@style/headerWeight"
        layout="@layout/template_header" />

    <LinearLayout
        style="@style/relativeLayoutWeight"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_verify_username"
            style="@style/Both_Wrap_style"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="@color/text_color_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_feedback_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_corner"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_feedback_emailid"
            style="@style/Both_Wrap_style"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/emailid"
            android:textColor="@color/text_color_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_feedback_emailid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_corner"
            android:hint="@string/hint_emailid"
            android:imeOptions="actionNext"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_comments"
            style="@style/Both_Wrap_style"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/comments"
            android:textColor="@color/text_color_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_comment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_corner"
            android:gravity="top"
            android:hint="@string/hint_comments"
            android:imeOptions="actionNext"
            android:maxLength="300"
            android:padding="5dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_selector_red"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>