<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Match_Wrap_style"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/week_password"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tv_medium_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/gray_q"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/medium_password"
        android:textColor="@color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tv_high_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/gray_q"
        android:gravity="center"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:text="@string/high_password"
        android:textColor="@color/white"
        android:textSize="10sp" />

</LinearLayout>