<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Both_Match_style"
    android:background="@color/bg_list"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_header"
        style="@style/headerWeight"
        layout="@layout/top_layout" />

    <LinearLayout
        style="@style/relativeLayoutWeight"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/Match_Wrap_style"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <AutoCompleteTextView
                android:id="@+id/onelevel_autotv"
                style="@style/Match_Wrap_style"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/bg_grad_strok"
                android:drawableLeft="@drawable/rec_search_left_icon"
                android:drawablePadding="8dp"
                android:hint="@string/onlevel_hit"
                android:padding="10dp"
                android:textColor="@color/gray_sq"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            style="@style/Match_Wrap_style"
            android:layout_marginTop="10dp"
            android:background="@drawable/homescreen_border"
            android:orientation="horizontal"
            android:padding="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mobile"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/invite_recaward"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/stata"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </LinearLayout>

        <com.md.hjyg.utility.LoadMoreListView
            android:id="@+id/mListView"
            style="@style/Match_Wrap_style"
            android:divider="@color/bg_list"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>